{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 28,
  "lineage": "ae5f8367-9084-798b-8a1f-4fe5bb69042f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lks_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ff0145e472c315ab",
            "arn": "arn:aws:ec2:us-east-1:598242636687:elastic-ip/eipalloc-0ff0145e472c315ab",
            "domain": "vpc",
            "id": "eipalloc-0ff0145e472c315ab",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-196-77-168.compute-1.amazonaws.com",
            "public_ip": "44.196.77.168",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "lks_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08982f1c5bf93d976",
            "arn": "arn:aws:ec2:us-east-1:598242636687:instance/i-0327b9167e67d7278",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0327b9167e67d7278",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-066c2fca3354fa4b3"
              }
            ],
            "primary_network_interface_id": "eni-066c2fca3354fa4b3",
            "private_dns": "ip-10-0-1-65.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.65",
            "public_dns": "ec2-3-92-87-70.compute-1.amazonaws.com",
            "public_ip": "3.92.87.70",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cd433f256e48e82d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03e7ca22ea9eb2f72",
            "tags": {
              "Name": "lks-ec2"
            },
            "tags_all": {
              "Name": "lks-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d863e508c0719d80"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "598242636687",
            "id": "i-0327b9167e67d7278",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ec2_sg",
            "aws_subnet.lks_public_subnet_1a",
            "aws_vpc.lks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "lks_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:598242636687:internet-gateway/igw-040096030369c4548",
            "id": "igw-040096030369c4548",
            "owner_id": "598242636687",
            "region": "us-east-1",
            "tags": {
              "Name": "lks-igw"
            },
            "tags_all": {
              "Name": "lks-igw"
            },
            "vpc_id": "vpc-0738afaee1381ff18"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.lks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "lks_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ff0145e472c315ab",
            "association_id": "eipassoc-03a6a9a61f19a5437",
            "connectivity_type": "public",
            "id": "nat-0db649f919bb8a803",
            "network_interface_id": "eni-01b76dc749a0cab34",
            "private_ip": "10.0.1.69",
            "public_ip": "44.196.77.168",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03e7ca22ea9eb2f72",
            "tags": {
              "Name": "lks-nat"
            },
            "tags_all": {
              "Name": "lks-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.lks_eip",
            "aws_subnet.lks_public_subnet_1a",
            "aws_vpc.lks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "lks_rtb_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:598242636687:route-table/rtb-0ae5cbc5a4ccea277",
            "id": "rtb-0ae5cbc5a4ccea277",
            "owner_id": "598242636687",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0db649f919bb8a803",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lks-rtb-private"
            },
            "tags_all": {
              "Name": "lks-rtb-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0738afaee1381ff18"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "598242636687",
            "id": "rtb-0ae5cbc5a4ccea277",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.lks_eip",
            "aws_nat_gateway.lks_nat",
            "aws_subnet.lks_public_subnet_1a",
            "aws_vpc.lks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "lks_rtb_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:598242636687:route-table/rtb-027a5682970183280",
            "id": "rtb-027a5682970183280",
            "owner_id": "598242636687",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-040096030369c4548",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lks-rtb-public"
            },
            "tags_all": {
              "Name": "lks-rtb-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0738afaee1381ff18"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "598242636687",
            "id": "rtb-027a5682970183280",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.lks_igw",
            "aws_vpc.lks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lks_private_subnet_1a_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc136e747b4ce2fe",
            "region": "us-east-1",
            "route_table_id": "rtb-0ae5cbc5a4ccea277",
            "subnet_id": "subnet-0c9be9ff147aa164a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.lks_eip",
            "aws_nat_gateway.lks_nat",
            "aws_route_table.lks_rtb_private",
            "aws_subnet.lks_private_subnet_1a",
            "aws_subnet.lks_public_subnet_1a",
            "aws_vpc.lks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lks_private_subnet_1b_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9fa4412bbda51de",
            "region": "us-east-1",
            "route_table_id": "rtb-0ae5cbc5a4ccea277",
            "subnet_id": "subnet-0efeb7c698b60cefd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.lks_eip",
            "aws_nat_gateway.lks_nat",
            "aws_route_table.lks_rtb_private",
            "aws_subnet.lks_private_subnet_1b",
            "aws_subnet.lks_public_subnet_1a",
            "aws_vpc.lks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lks_public_subnet_1a_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f83c4f626af8bf4",
            "region": "us-east-1",
            "route_table_id": "rtb-027a5682970183280",
            "subnet_id": "subnet-03e7ca22ea9eb2f72"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.lks_igw",
            "aws_route_table.lks_rtb_public",
            "aws_subnet.lks_public_subnet_1a",
            "aws_vpc.lks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lks_public_subnet_1b_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ec41e19092eb357",
            "region": "us-east-1",
            "route_table_id": "rtb-027a5682970183280",
            "subnet_id": "subnet-0b2091fa838657588"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.lks_igw",
            "aws_route_table.lks_rtb_public",
            "aws_subnet.lks_public_subnet_1b",
            "aws_vpc.lks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:598242636687:security-group/sg-0d863e508c0719d80",
            "description": "Allow SSH and HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d863e508c0719d80",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lks-ec2-sg",
            "name_prefix": "",
            "owner_id": "598242636687",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lks-ec2-sg"
            },
            "tags_all": {
              "Name": "lks-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0738afaee1381ff18"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "598242636687",
            "id": "sg-0d863e508c0719d80",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.lks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lks_private_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:598242636687:subnet/subnet-0c9be9ff147aa164a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c9be9ff147aa164a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "598242636687",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "lks-private-subnet-1a"
            },
            "tags_all": {
              "Name": "lks-private-subnet-1a"
            },
            "vpc_id": "vpc-0738afaee1381ff18"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "598242636687",
            "id": "subnet-0c9be9ff147aa164a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.lks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lks_private_subnet_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:598242636687:subnet/subnet-0efeb7c698b60cefd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0efeb7c698b60cefd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "598242636687",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "lks-private-subnet-1b"
            },
            "tags_all": {
              "Name": "lks-private-subnet-1b"
            },
            "vpc_id": "vpc-0738afaee1381ff18"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "598242636687",
            "id": "subnet-0efeb7c698b60cefd",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.lks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lks_public_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:598242636687:subnet/subnet-03e7ca22ea9eb2f72",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03e7ca22ea9eb2f72",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "598242636687",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "lks-public-subnet-1a"
            },
            "tags_all": {
              "Name": "lks-public-subnet-1a"
            },
            "vpc_id": "vpc-0738afaee1381ff18"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "598242636687",
            "id": "subnet-03e7ca22ea9eb2f72",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.lks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lks_public_subnet_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:598242636687:subnet/subnet-0b2091fa838657588",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2091fa838657588",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "598242636687",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "lks-public-subnet-1b"
            },
            "tags_all": {
              "Name": "lks-public-subnet-1b"
            },
            "vpc_id": "vpc-0738afaee1381ff18"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "598242636687",
            "id": "subnet-0b2091fa838657588",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.lks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:598242636687:vpc/vpc-0738afaee1381ff18",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0eb57015e4616ccb5",
            "default_route_table_id": "rtb-036c6920e49568f73",
            "default_security_group_id": "sg-0a3d74555f00d39f2",
            "dhcp_options_id": "dopt-0793d5b7eb23ee7ec",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0738afaee1381ff18",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-036c6920e49568f73",
            "owner_id": "598242636687",
            "region": "us-east-1",
            "tags": {
              "Name": "lks-vpc"
            },
            "tags_all": {
              "Name": "lks-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}